# wingman

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/day1-service/: Dockerfile  pyproject.toml
apps/day1-service/src/: config.py  dependencies.py  main.py
apps/day1-service/src/routers/: approvals.py  audit.py  auth.py  clusters.py  sites.py  specs.py  webhooks.py
apps/day1-service/src/services/: approval_service.py  audit_service.py  cluster_service.py  cluster_status_service.py  drift_detector.py  spec_service.py  template_analyzer.py  yaml_renderer.py
apps/day2-service/: Dockerfile  pyproject.toml
apps/day2-service/src/: config.py  dependencies.py  main.py
apps/day2-service/src/routers/: addons.py  approvals.py  audit.py
apps/day2-service/src/services/: addon_service.py  approval_service.py  audit_service.py  helm_values_fetcher.py
apps/web/: Dockerfile  README.md  package.json  playwright.config.ts  proxy.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(app)/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/clusters/: dynamic-variable-form.tsx  status-badge.tsx
apps/web/components/common/: gitlab-file-list.tsx  mr-creation-progress.tsx  review-dialog.tsx  yaml-diff-viewer.tsx
apps/web/components/layout/: app-shell.tsx  easter-egg.tsx  providers.tsx  sidebar-nav.tsx  user-menu.tsx
apps/web/components/specs/: configure-overrideable-dialog.tsx
apps/web/lib/: api-client.ts  diff.ts
apps/web/stores/: auth-store.ts
apps/web/types/: index.ts
chart/: Chart.yaml  README.md  values.minikube.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  day1-deployment.yaml  day1-service.yaml  day2-deployment.yaml  day2-service.yaml  ingress.yaml  nginx-configmap.yaml  nginx-deployment.yaml  oauth-client.yaml  route.yaml  secret.yaml  serviceaccount.yaml  web-deployment.yaml  web-service.yaml
scripts/: build-images.sh  minikube-dev-setup.sh  seed-test-data.py
(+29 files in other folders)
