[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingman-day1-service"
version = "0.1.0"
description = "Wingman Day1 Service — cluster provisioning"
requires-python = ">=3.12,<3.13"
dependencies = [
    "wingman-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "kubernetes>=29,<32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",       # for TestClient
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
wingman-shared = { path = "../../packages/shared-python", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
