[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingman-day2-service"
version = "0.1.0"
description = "Wingman Day2 Service — addon and operator management"
requires-python = ">=3.12,<3.13"
dependencies = [
    "wingman-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
wingman-shared = { path = "../../packages/shared-python", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
